--- a/src/l.gutorova/homework_5/Task_5/Task_5.html
+++ b/src/l.gutorova/homework_5/Task_5/Task_5.html
@@ -5,12 +5,13 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Homework_5</title>
-    <link rel="stylesheet" type="text/css" href="Task_4.css">
+    <link rel="stylesheet" type="text/css" href="Task_5.css">
 </head>
 <body>
-    <div class="top"><h2>Новостной портал</h2></div>
     <div class="conteiner">
-        <div class="text">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Nam qui, ut asperiores ullam nisi rerum totam itaque ea sunt animi impedit facilis minima dolor debitis,
+    <div class="text">
+        <h1>Создание сайтов &#8211; портфолио</h1>
+        Lorem ipsum dolor sit amet consectetur, adipisicing elit. Nam qui, ut asperiores ullam nisi rerum totam itaque ea sunt animi impedit facilis minima dolor debitis,
             quo expedita officiis deserunt voluptates.lo Lorem ipsum dolor sit amet consectetur adipisicing elit. 
             Saepe veritatis expedita dolores at sunt, sed vero, soluta dolor corrupti non officia quisquam laboriosam obcaecati? 
             Quidem doloremque ab odio ut sit? Lorem ipsum dolor sit amet consectetur adipisicing elit. Enim tempora consectetur odit veniam! Iste vero possimus error aperiam distinctio. 
@@ -52,7 +53,9 @@
                  Quaerat a est tenetur labore possimus ipsum aspernatur sunt ab necessitatibus! Lorem, ipsum dolor sit amet consectetur adipisicing elit. At eius a illo rem recusandae rerum, fuga provident voluptas tempore eligendi expedita eum eaque incidunt quasi? Molestiae
                   expedita ipsa non laboriosam!Lorem Lorem ipsum dolor sit, amet consectetur adipisicing elit.
                    Eveniet unde dolore et officia quo corrupti nemo culpa suscipit nesciunt magni sit ea doloribus, quisquam 
-                  voluptatum omnis, saepe corporis cupiditate minus?</div>
-    </div> 
+                  voluptatum omnis, saepe corporis cupiditate minus?
+    </div>
+    </div>
+    <div class="bottom">Контакты: dslfhshglig@mail.ru</div>
 </body>
 </html>
