--- a/src/l.gutorova/homework_5/Task_2/Task_2.html
+++ b/src/l.gutorova/homework_5/Task_2/Task_2.html
@@ -8,50 +8,26 @@
     <link rel="stylesheet" type="text/css" href="Task_2.css">
 </head>
 <body>
-    <h3 style="text-align: center;">position: relative cub2_1</h3>
-<div class="cub_2-1 relative">
+    <h3 style="text-align: center;">cub_1</h3>
+<div class="cub_2-1">
     <div class="cub_red_2-1"></div>
     <div class="cub_blue_2-1"></div>
     <div class="cub_green_2-1"></div>
 </div>
-<h3 style="text-align: center;">position: absolute cub2_1</h3>
-<div class="cub_2-1 absolute">
-    <div class="cub_red_2-1"></div>
-    <div class="cub_blue_2-1"></div>
-    <div class="cub_green_2-1"></div>
-</div>
-<h3 style="text-align: center;">position: relative cub2_2</h3>
-<div class="cub_2-1 relative">
+<h3 style="text-align: center;">cub_2</h3>
+<div class="cub_2-1">
     <div class="cub_red_2-1"></div>
     <div class="cub_blue_2-2"></div>
     <div class="cub_green_2-1"></div>
 </div>
-<h3 style="text-align: center;">position: absolute cub2_2</h3>
-<div class="cub_2-1 absolute">
-    <div class="cub_red_2-1"></div>
-    <div class="cub_blue_2-2"></div>
-    <div class="cub_green_2-1"></div>
-</div>
-<h3 style="text-align: center;">position: relative cub2_3</h3>
-<div class="cub_2-1 relative">
+<h3 style="text-align: center;">cub_3</h3>
+<div class="cub_2-1">
     <div class="cub_red_2-3"></div>
     <div class="cub_blue_2-2"></div>
     <div class="cub_green_2-3"></div>
 </div>
-<h3 style="text-align: center;">position: absolute cub2_3</h3>
-<div class="cub_2-1 absolute">
-    <div class="cub_red_2-3"></div>
-    <div class="cub_blue_2-2"></div>
-    <div class="cub_green_2-3"></div>
-</div>
-<h3 style="text-align: center;">position: relative cub2_4</h3>
+<h3 style="text-align: center;">cub_4</h3>
 <div class="cub_2-1 relative">
-    <div class="cub_red_2-3"></div>
-    <div class="cub_blue_2-2"></div>
-    <div class="cub_green_2-1"></div>
-</div>
-<h3 style="text-align: center;">position: absolute cub2_4</h3>
-<div class="cub_2-1 absolute">
     <div class="cub_red_2-3"></div>
     <div class="cub_blue_2-2"></div>
     <div class="cub_green_2-1"></div>
