--- a/src/l.gutorova/homework_5/Task_6/Task_6.html
+++ b/src/l.gutorova/homework_5/Task_6/Task_6.html
@@ -8,14 +8,38 @@
     <link rel="stylesheet" type="text/css" href="Task_6.css">
 </head>
 <body>
+
+<div class="common">
+
 <div class="tabl_1">
-    <div class="header"></div>
-    <div class="box">
-        <div class="left"></div>
-        <div class="content"></div>
-        <div class="right"></div>
+    <p style="text-align: center; font-size: 20px; "><b>Table_1</b></p>
+    <div class="header-1">header</div>
+    <div class="box-1">
+        <div class="left-1">left</div>
+        <div class="content-1">content</div>
+        <div class="right-1">right</div>
     </div>
-    <div class="footer"></div>
+    <div class="footer-1">footer</div>
+</div>
+
+
+<div class="tabl_1">
+    <p style="text-align: center; font-size: 20px; "><b>Table_2</b></p>
+    <div class="header-1">header</div>
+    <div class="box-1">
+        <div class="left-2">
+            <div class="cub-2"></div>
+            <div class="cub-2"></div>
+            <div class="cub-2"></div>
+            <div class="cub-2"></div>
+        </div>
+   
+        <div class="content-2">content</div>
+        <div class="right-2">right</div>
+        
+    </div>
+    <div class="footer-1">footer</div>
+</div>
 </div>
 </body>
 </html>
