--- a/src/l.gutorova/homework_5/Task_7/Task_7.html
+++ b/src/l.gutorova/homework_5/Task_7/Task_7.html
@@ -6,22 +6,26 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Homeork_5</title>
     <link rel="stylesheet" type="text/css" href="Task_7.css">
+    <link href="https://fonts.googleapis.com/css2?family=Material+Icons"
+      rel="stylesheet">
 </head>
 <body>
 <div class="common">
 
 <div class="conteiner_zavtrak">
     <div class="top_1" >
-        <div class="sun_1"><img src="../Task_7/picture/sun_1.jpg">Завтрак</div>
+        <div class="text">Завтрак</div>
         <div class="top_1-call">
             <div>
-               <div>1453</div>
-               <div>Калории</div>
+               <div class="text">1453</div>
+               <div class="text-small" >Калории</div>
             </div>
-            <div>+</div>
+            <div><img class="plus" src="../Task_7/picture/plus.jpg"></div>
         </div>
     </div>
-    <div class="bottom_1"></div>
+    <div class="bottom_1">88,03 131,76 37,85 32%
+        <div><span class="material-icons">expand_more</span></div>
+    </div>
 </div>
 
 
