--- a/src/e.ekushenko/homework_4/homework_4_3.html
+++ b/src/e.ekushenko/homework_4/homework_4_3.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="utf-8" />
     <title>Selectors: Pseudo-class and Pseudo-element Selectors</title>
-    <link rel="stylesheet" href="css4.css" />
+    <link rel="stylesheet" href="css4_3.css" />
     <style>
         body {
             background-color: #fff;
