--- a/src/e.ekushenko/homework_4/homework_4_1.html
+++ b/src/e.ekushenko/homework_4/homework_4_1.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="utf-8" />
     <title>Selectors: Type Selectors</title>
-    <link rel="stylesheet" href="../styles.css" />
+    <link rel="stylesheet" href="css4_1.css" />
     <style>
         body {
             background-color: #fff;
