--- a/src/e.ekushenko/homework_4/homework_4_2.html
+++ b/src/e.ekushenko/homework_4/homework_4_2.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="utf-8" />
     <title>Selectors: Class and ID Selectors</title>
-    <link rel="stylesheet" href="css4.css" />
+    <link rel="stylesheet" href="css4_2.css" />
     <style>
         body {
             background-color: #fff;
@@ -13,12 +13,10 @@
             padding: 1em;
             margin: 0;
         }
-
+        
         * {
             box-sizing: border-box;
         }
-
-      
     </style>
 
 </head>
@@ -29,16 +27,13 @@
         <h1>This is a heading</h1>
         <p>Veggies es
             <span class="alert">bonus vobis</span>, proinde vos postulo
-            <span class="alert stop">essum magis</span>
-            kohlrabi welsh onion daikon amaranth tatsoi tomatillo melon azuki bean garlic.
+            <span class="alert stop">essum magis</span> kohlrabi welsh onion daikon amaranth tatsoi tomatillo melon azuki bean garlic.
         </p>
         <h2 id="special">A level 2 heading</h2>
         <p>Gumbo beet greens corn soko endive gumbo gourd.</p>
         <h2>Another level 2 heading</h2>
         <p>
-            <span class="alert go">Parsley shallot</span>
-            courgette tatsoi pea sprouts fava bean collard greens dandelion okra wakame tomato. Dandelion cucumber
-            earthnut pea peanut soko zucchini.
+            <span class="alert go">Parsley shallot</span> courgette tatsoi pea sprouts fava bean collard greens dandelion okra wakame tomato. Dandelion cucumber earthnut pea peanut soko zucchini.
         </p>
     </div>
 </body>
