--- a/src/e.ekushenko/homework_4/homework_4_4.html
+++ b/src/e.ekushenko/homework_4/homework_4_4.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="utf-8" />
     <title>Selectors: Combinators</title>
-    <link rel="stylesheet" href="css4.css" />
+    <link rel="stylesheet" href="css4_4.css" />
     <style>
         body {
             background-color: #fff;
