--- a/src/e.ekushenko/homework_4/homework_4_5.html
+++ b/src/e.ekushenko/homework_4/homework_4_5.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="utf-8">
     <title>Selectors: attribute selectors</title>
-    <link rel="stylesheet" href="css4.css">
+    <link rel="stylesheet" href="css4_5.css">
 
     <style>
         body {
