--- a/src/l.gutorova/homework_6/Task_1/Task_1.html
+++ b/src/l.gutorova/homework_6/Task_1/Task_1.html
@@ -6,12 +6,15 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Homework_6</title>
     <link rel="stylesheet" type="text/css" href="./Task_1.css">
+    <link href="https://fonts.googleapis.com/css2?family=Material+Icons"
+      rel="stylesheet">
 </head>
 <body>
     <div class="common">
         <div class="top">Registration</div>
         <div class="borger_radio-top">
             <form class="radio-top">
+                <span class="material-icons">expand_circle_down</span>
                 <input type="radio" name="answer1">Personal
                 <input type="radio" name="answer1">Company
             </form>
