--- a/src/l.gutorova/homework_6/Task_1/Task_12.html
+++ b/src/l.gutorova/homework_6/Task_1/Task_12.html
@@ -35,7 +35,7 @@
             <div class="icon"><span class="material-icons">email</span></div>
             <div>
                 <label>
-                    <input type="email" name="answer" value="Email">
+                    <input type="email" name="answer" placeholder="Email">
                 </label>
             </div>
         </div>
@@ -45,7 +45,7 @@
                 </div>
             <div>
                 <label>
-                    <input type="text" name="answer" value="Name">
+                    <input type="text" name="answer" placeholder="Name">
                 </label>
             </div>
         </div>
@@ -54,7 +54,7 @@
             <div class="icon"><span class="material-icons">security</span></div>
             <div>
                 <label>
-                    <input type="text" name="answer" value="Password">
+                    <input type="password" name="answer" placeholder="Password">
                 </label>
             </div>
         </div>
