--- a/src/l.gutorova/homework_6/Task_1/Task_1.html
+++ b/src/l.gutorova/homework_6/Task_1/Task_1.html
@@ -15,7 +15,7 @@
     <div class="borger_checkbox">
             <div>
                 <label class="checkbox">
-                    <input type="checkbox" name="new" hidden>
+                    <input type="radio" name="new" hidden>
                     <span class="material-icons checked">check_circle</span>
                     <span class="material-icons unchecked">circle</span>
                 </label>
@@ -23,7 +23,7 @@
             <div class="text-top">Personal</div>
             <div>
                 <label class="checkbox">
-                    <input type="checkbox" name="new" hidden>
+                    <input type="radio" name="new" hidden>
                     <span class="material-icons checked">check_circle</span>
                     <span class="material-icons unchecked">circle</span>
                 </label>
@@ -61,7 +61,7 @@
     <div class="bottom_checkbox">
         <div>
             <label class="checkbox">
-                    <input type="checkbox" name="new" hidden>
+                    <input type="radio" name="new" hidden>
                     <span class="material-icons checked">check_circle</span>
                     <span class="material-icons unchecked">circle</span>
             </label>
@@ -69,7 +69,7 @@
             <div class="text-top">Male</div>
         <div>
             <label class="checkbox">
-                    <input type="checkbox" name="new" hidden>
+                    <input type="radio" name="new" hidden>
                     <span class="material-icons checked">check_circle</span>
                     <span class="material-icons unchecked">circle</span>
             </label>
