--- a/src/l.gutorova/homework_6/Task_1/Task_1.html
+++ b/src/l.gutorova/homework_6/Task_1/Task_1.html
@@ -12,6 +12,7 @@
 <body>
 <div class="common">
     <div class="top">Registration</div>
+    <form>
     <div class="borger_checkbox">
             <div>
                 <label class="checkbox">
@@ -61,7 +62,7 @@
     <div class="bottom_checkbox">
         <div>
             <label class="checkbox">
-                    <input type="radio" name="new" hidden>
+                    <input type="radio" name="new1" hidden>
                     <span class="material-icons checked">check_circle</span>
                     <span class="material-icons unchecked">circle</span>
             </label>
@@ -69,7 +70,7 @@
             <div class="text-top">Male</div>
         <div>
             <label class="checkbox">
-                    <input type="radio" name="new" hidden>
+                    <input type="radio" name="new1" hidden>
                     <span class="material-icons checked">check_circle</span>
                     <span class="material-icons unchecked">circle</span>
             </label>
@@ -79,11 +80,10 @@
     <div class="bottom">
         <div class="bottom_text">By cliking Register you agree on our <a href="https://www.onliner.by/" target="_blank">terms and conditions</a> </div>
         <div class="bottom_button">
-            <form>
                 <button type="submit">Register</button>
-            </form>
         </div>
     </div>
+    </form>
 
 
 
