--- a/src/l.gutorova/homework_6/Task_3/Task_3.html
+++ b/src/l.gutorova/homework_6/Task_3/Task_3.html
@@ -12,7 +12,7 @@
 <body>
 <div class="common">
     <div class="picture">
-        <img src="./picture_3.jpg">
+        <img src="../Task_3/picture/picture_3.jpg">
     </div>
     <div class="conteiner">
         <div class="title">
@@ -45,6 +45,17 @@
                 </div>
                 <div class="checkbox-text">Remember me</div>
                 </label>
+                <div class="submit">
+                    <button type="submit">Log in</button>
+                </div>
+                <div class="bottom">
+                    <div class="checkbox-text">Or lodin with</div>
+                    <div>
+                    <a href="https://ru-ru.facebook.com/" target="_blank"><img src="../Task_3/picture/picture_1.jpg"></a>
+                    <a href="https://twitter.com/login?lang=ru" target="_blank"><img src="../Task_3/picture/picture_2.jpg"></a>
+                    <a href="https://www.google.com/intl/ru/account/about/" target="_blank"><img src="../Task_3/picture/picture_4.png"></a>
+                    </div>
+                </div>
         </form>
     </div>
 </div>
