--- a/src/l.gutorova/homework_6/Task_7/Task_7.html
+++ b/src/l.gutorova/homework_6/Task_7/Task_7.html
@@ -10,21 +10,21 @@
 <body>
     <div class="common">
         <div class="conteiner">
-            <div class="cub  media_1">Какой-то текст</div>
-            <div class="cub  media_2">Какой-то текст</div>
-            <div class="cub  media_3">Какой-то текст</div>
-            <div class="cub  media_4">Какой-то текст</div>
+            <div class="cub  media_1">текст</div>
+            <div class="cub  media_2">текст</div>
+            <div class="cub  media_3">текст</div>
+            <div class="cub  media_4">текст</div>
         </div>
         <div class="conteiner">
-            <div class="cub  media_5">Какой-то текст</div>
-            <div class="cub  media_6">Какой-то текст</div>
-            <div class="cub  media_7">Какой-то текст</div>
-            <div class="cub  media_8">Какой-то текст</div>
+            <div class="cub  media_5">текст</div>
+            <div class="cub  media_6">текст</div>
+            <div class="cub  media_7">текст</div>
+            <div class="cub  media_8">текст</div>
         </div>
         <div class="conteiner">
-            <div class="cub  media_9">Какой-то текст</div>
-            <div class="cub  media_10">Какой-то текст</div>
-            <div class="cub  media_11">Какой-то текст</div>
+            <div class="cub  media_9">текст</div>
+            <div class="cub  media_10">текст</div>
+            <div class="cub  media_11">текст</div>
             </div>
     </div>
 </body>
