--- a/src/l.gutorova/homework_6/Task_2/Task_2.html
+++ b/src/l.gutorova/homework_6/Task_2/Task_2.html
@@ -76,13 +76,11 @@
         </div>
         <div class="borger_radio">
             <div class="content-text">Are you an axisting customer</div>
-            <div>
-                <label class="radio">yes
+                <label class="radio">
                     <input type="radio" name="new6" hidden> 
                     <span class="material-icons  checked">radio_button_checked</span>
                     <span class="material-icons  unchecked">radio_button_unchecked</span>
                 </label>
-            </div>
         </div>
 
         </form>
