--- a/src/l.gutorova/homework_6/Task_2/Task_2.html
+++ b/src/l.gutorova/homework_6/Task_2/Task_2.html
@@ -10,81 +10,89 @@
       rel="stylesheet">
 </head>
 <body>
+<form>
     <div class="common">
         <div class="conteiner">
             <div class="title">EVENT REGISTRATION FORM</div>
-        <form>
-        <div>
+
             <div class="content">
-                    <div class="content-text">Name</div>
-                    <div class="content-form  form-1">
-                        <div>
-                            <input type="text" name="new1" >
+
+                <div class="ampty"></div>
+                <div class="content-input">
+
+                    <div class="new">
+                        <div class="content-text">Name</div>
+                        <div class="content-form  form-1">
+                            <div>
+                                <input type="text" name="new1" >
+                            </div>
+                            <div>
+                                <input type="text" name="new2">
+                            </div>
                         </div>
+                    </div>
+                    <div class="small_text">
+                        <div>First name</div>
+                        <div>Last name</div>
+                    </div>
 
-                        <div>
-                            <input type="text" name="new1">
+                    <div class="new">
+                        <div class="content-text">Company</div>
+                        <div class="content-form  form-2">
+                                <input type="text" name="new3" >
                         </div>
                     </div>
-            </div>
-            
-            <div class="small_text">
-                <div>First name</div>
-                <div>Last name</div>
-            </div>
-            
-            <div class="content  Company">
-                <div class="content-text">Company</div>
-                <div class="content-form  form-2">
-                        <input type="text" name="new2" >
-                </div>
-            </div>
-            <div class="content">
-                <div class="content-text">Email</div>
-                <div class="content-form  form-3">
-                        <input type="text" name="new3" placeholder="valeryiagutorova@vk.com" >
-                </div>
-            </div>
-            <div class="content">
-                <div class="content-text">Phone</div>
-                <div class="content-form  form-4">
-                    <div class="form-4-1">
-                        <input type="text" name="new4" >
-                    </div>
-                    <div  class="form-4-2">
-                        <input type="text" name="new4">
-                    </div>
-                </div>
-             </div>
 
-             <div class="small_text  number">
-                <div>Area cod</div>
-                <div>Phone number</div>
+                    <div class="new">
+                        <div class="content-text">Email</div>
+                        <div class="content-form  form-2  placeholder">
+                                <input type="text" name="new4" placeholder="valeryiagutorova@vk.com" >
+                        </div>
+                    </div>
+
+                    <div class="new">
+                        <div class="content-text">Phone</div>
+                        <div class="content-form ">
+                            <div class="form-3-1">
+                                <input type="text" name="new5" >
+                            </div>
+                            <div class="form-3-2">
+                                <input type="text" name="new6">
+                            </div>
+                        </div>
+                    </div>
+                    <div class="small_text  number">
+                        <div>Area cod</div>
+                        <div>Phone number</div>
+                    </div>
+
+                    <div class="new">
+                        <div class="content-text">Subject</div>
+                        <div class="content-form  form-2">
+                                <select name="new7">
+                                    <option>Choose option</option>
+                                    <option>option-1</option>
+                                    <option>option-3</option>
+                        </div>
+                    </div>
+                    <div class="new-2">
+                        <div class="text">Are you an axisting customer</div>
+                        <div class="checkbox"></div>
+                    </div>
+                    <div class="new-3">
+                        <button type="submit">REGISTER</button>
+                    </div>
+
+
+
+                </div>
+                <div class="ampty"></div>
+
             </div>
 
-             <div class="content  Subject">
-                <div class="content-text  text-5">Subject</div>
-                <div class="content-form  form-5">
-                    <div>
-                        <select name="new5">
-                            <option>Choose option</option>
-                            <option>Option 1</option>
-                            <option>Option 2</option>
-                    </div>
-                </div>
-            </div>
-        </div>
-        <div class="borger_radio">
-            <div class="content-text">Are you an axisting customer</div>
-                <label class="radio">
-                    <input type="radio" name="new6" hidden> 
-                    <span class="material-icons  checked">radio_button_checked</span>
-                    <span class="material-icons  unchecked">radio_button_unchecked</span>
-                </label>
         </div>
 
-        </form>
-        </div>
     </div>
+</form>
 </body>
 </html>
