--- a/src/l.gutorova/homework_6/Task_2/Task_2.html
+++ b/src/l.gutorova/homework_6/Task_2/Task_2.html
@@ -73,12 +73,26 @@
                                     <option>Choose option</option>
                                     <option>option-1</option>
                                     <option>option-3</option>
+                                    </select>
                         </div>
                     </div>
                     
                     <div class="new-2">
-                        <div class="text">Are you an axisting customer</div>
-                        <div class="checkbox"></div>
+                        <div class="text">Are you an axisting customer?</div>
+                        <div class="checkbox">
+                            <label>
+                            <input type="radio" name="new8" hidden>
+                            <span class="material-icons  checked">radio_button_checked</span>
+                            <span class="material-icons  unchecked">radio_button_unchecked</span>
+                            </label>
+                        </div>
+                        <div class="checkbox">
+                            <label>
+                            <input type="radio" name="new8" hidden>
+                            <span class="material-icons  checked">radio_button_checked</span>
+                            <span class="material-icons  unchecked">radio_button_unchecked</span>
+                            </label>
+                        </div>
                     </div>
                     <div class="new-3">
                         <button type="submit">REGISTER</button>
