--- a/src/l.gutorova/homework_6/Task_2/Task_2.html
+++ b/src/l.gutorova/homework_6/Task_2/Task_2.html
@@ -80,19 +80,22 @@
                     <div class="new-2">
                         <div class="text">Are you an axisting customer?</div>
                         <div class="checkbox">
+                        <div class="bottom">
                             <label>
                             <input type="radio" name="new8" hidden>
                             <span class="material-icons  checked">radio_button_checked</span>
                             <span class="material-icons  unchecked">radio_button_unchecked</span>
                             </label>
-                        </div>
-                        <div class="checkbox">
-                            <label>
+                            <div class="bottom-text">Yes</div>
+                        
+                            <label class="checkbox">
                             <input type="radio" name="new8" hidden>
                             <span class="material-icons  checked">radio_button_checked</span>
                             <span class="material-icons  unchecked">radio_button_unchecked</span>
                             </label>
+                            <div class="bottom-text">No</div>
                         </div>
+                        
                     </div>
                     <div class="new-3">
                         <button type="submit">REGISTER</button>
