--- a/src/l.gutorova/homework_6/Task_6/Task_67.html
+++ b/src/l.gutorova/homework_6/Task_6/Task_67.html
@@ -36,14 +36,11 @@
 
                     <div class="content  text">Or Connent with Social Media</div>
 
-                    <div class="content  submit  any">
-                        <img src="./picture/picture-2.jpg">
-                        <button type="submit">Sing in With Twitter</button>
+                    <div class="content  any">
+                        <a href="https://ru-ru.facebook.com/" target="_black"><img src="./picture/Facebook.jpg"></a>
                     </div>
-                    <div class="content  submit  other">
-                        <img src="./picture/picture-3.png">
-                        <button type="submit">Sing in With Facebook</button>
-                        
+                    <div class="content  other">
+                       <a href="https://twitter.com/" target="_black"><img src="./picture/Titter.jpg"></a> 
                     </div>
                    
                 </form>
