--- a/src/l.gutorova/homework_7/Task_1.html
+++ b/src/l.gutorova/homework_7/Task_1.html
@@ -9,7 +9,14 @@
 </head>
 <body>
     <div class="common">
-        <div class="conteiner"></div>
+        <div class="conteiner">
+            <div class="cub_1"><img src="./pasted image.png"></div>
+            <div class="cub_2"><img src="./pasted image.png"></div>
+            <div class="cub_3"><img src="./pasted image.png"></div>
+            <div class="cub_4"><img src="./pasted image.png"></div>
+            <div class="cub_5"><img src="./pasted image.png"></div>
+            <div class="cub_6"><img src="./pasted image.png"></div>
+        </div>
         <div class="conteiner"></div>
         <div class="conteiner"></div>
         <div class="conteiner"></div>
