--- a/src/l.gutorova/homework_7/Task_2.html
+++ b/src/l.gutorova/homework_7/Task_2.html
@@ -11,8 +11,41 @@
 </head>
 <body>
     <div class="title">
-        <div class="mounth"></div>
-        <div class="data"></div>
+
+        <div class="title-top"></div>
+
+        <div class="title-bottom">
+            <div class="number">
+                <div  class="mounth">MON</div>
+                <div class="data">21</div>
+            </div>
+            <div class="number  number-white">
+                <div  class="mounth">TUE</div>
+                <div class="data">22</div>
+            </div>
+            <div class="number  number-blue">
+                <div  class="mounth">WED</div>
+                <div class="data">23</div>
+            </div>
+            <div class="number">
+                <div  class="mounth">THU</div>
+                <div class="data">24</div>
+            </div>
+            <div class="number">
+                <div  class="mounth">FRI</div>
+                <div class="data">25</div>
+            </div>
+        </div>
+
+        <div class="conteiner">
+
+            <div class="content-1">
+            <div class="text">TO DO</div>
+            <div class="text-little">(2)</div>
+            </div>
+
+        </div>
+
     </div>
 </body>
 </html>
