--- a/src/l.gutorova/homework_8/Homework_8.html
+++ b/src/l.gutorova/homework_8/Homework_8.html
@@ -10,7 +10,29 @@
 <body>
     <div class="common-1">
 
+        <div class="conteiner-1">
+            <a class="a_1" target="_blank" href="https://yandex.by/"></a>
+            <a class="a_2" target="_blank" href="./Homework_8.html"></a>
+        </div>
+
+        <div class="conteiner-2">
+            <div class="text-1">Ехать,<br>отправлять,<br>встречат</div>
+            <div class="text-2">Заказывайте машину, чтобы отправиться в путь,
+                <br>или доставку, чтобы отправить в путь небольшой
+                <br>груз</div>
+                <div class="a_3">
+                    <a href="#bottom">Скачать приложение</a>
+                </div>
+        </div>
     </div>
-    
+
+    <div class="common-2">
+        <div class="conteiner-3">
+
+        </div>
+
+    </div>
+
+    <a id="bottom"></a>
 </body>
 </html>
