--- a/src/l.gutorova/homework_7/Task_2.html
+++ b/src/l.gutorova/homework_7/Task_2.html
@@ -12,12 +12,21 @@
 <body>
     <div class="title">
 
-        <div class="title-top"></div>
+        <div class="title-top">
+            <div class="title-top_mark"><span class="material-icons">dehaze</span></div>
+            <div class="title-top_mounth">
+                <div>AUGUST 2017</div> 
+                <div><span class="material-icons">arrow_drop_down</span></div>
+            </div>
+            <div class="title-top_mark"><span class="material-icons">search</span></div>
+        </div>
+    
 
         <div class="title-bottom">
             <div class="number">
                 <div  class="mounth">MON</div>
                 <div class="data">21</div>
+                <div class="point"></div>
             </div>
             <div class="number  number-white">
                 <div  class="mounth">TUE</div>
@@ -30,20 +39,20 @@
             <div class="number">
                 <div  class="mounth">THU</div>
                 <div class="data">24</div>
+                <div class="point"></div>
             </div>
             <div class="number">
                 <div  class="mounth">FRI</div>
                 <div class="data">25</div>
             </div>
         </div>
+    </div>
 
-        <div class="conteiner">
+    <div class="conteiner">
 
-            <div class="content-1">
-            <div class="text">TO DO</div>
-            <div class="text-little">(2)</div>
-            </div>
-
+        <div class="content-1">
+        <div class="text">TO DO</div>
+        <div class="text-little">(2)</div>
         </div>
 
     </div>
