--- a/src/l.gutorova/homework_7/Task_2.html
+++ b/src/l.gutorova/homework_7/Task_2.html
@@ -14,7 +14,7 @@
 
         <div class="title-top">
             <div class="title-top_mark"><span class="material-icons">dehaze</span></div>
-            <div class="title-top_mounth">
+            <div class="title-top_month">
                 <div>AUGUST 2017</div> 
                 <div><span class="material-icons">arrow_drop_down</span></div>
             </div>
@@ -24,35 +24,46 @@
 
         <div class="title-bottom">
             <div class="number">
-                <div  class="mounth">MON</div>
+                <div  class="month">MON</div>
                 <div class="data">21</div>
                 <div class="point"></div>
             </div>
             <div class="number  number-white">
-                <div  class="mounth">TUE</div>
+                <div  class="month">TUE</div>
                 <div class="data">22</div>
             </div>
             <div class="number  number-blue">
-                <div  class="mounth">WED</div>
+                <div  class="month">WED</div>
                 <div class="data">23</div>
             </div>
             <div class="number">
-                <div  class="mounth">THU</div>
+                <div  class="month">THU</div>
                 <div class="data">24</div>
                 <div class="point"></div>
             </div>
             <div class="number">
-                <div  class="mounth">FRI</div>
+                <div  class="month">FRI</div>
                 <div class="data">25</div>
             </div>
         </div>
     </div>
 
-    <div class="conteiner">
+    <div class="main-content">
 
-        <div class="content-1">
+        <div class="comteiner-1">
         <div class="text">TO DO</div>
         <div class="text-little">(2)</div>
+        </div>
+
+        <div class="comteiner-2">
+            <div class="line-2"></div>
+            <div class="content-2">
+                <div class="deal">
+                    <div>19</div>
+                    <div></div>
+                </div>
+                <div class="radiobox"></div>
+            </div>
         </div>
 
     </div>
