--- a/src/l.gutorova/homework_7/Task_2.html
+++ b/src/l.gutorova/homework_7/Task_2.html
@@ -10,6 +10,7 @@
       rel="stylesheet">
 </head>
 <body>
+<form>
     <div class="title">
 
         <div class="title-top">
@@ -49,23 +50,35 @@
     </div>
 
     <div class="main-content">
+  
 
         <div class="comteiner-1">
-        <div class="text">TO DO</div>
-        <div class="text-little">(2)</div>
+           <div class="text">TO DO</div>
+           <div class="text-little">(2)</div>
         </div>
 
         <div class="comteiner-2">
             <div class="line-2"></div>
+
             <div class="content-2">
+
                 <div class="deal">
-                    <div>19</div>
-                    <div></div>
+                    <div class="deal-number">19:00</div>
+                    <div class="deal-text">Partnerds Meeting</div>
                 </div>
-                <div class="radiobox"></div>
+
+                <div>
+                    <label class="checkbox">
+                        <input type="checkbox"  name="new1">
+                        <span class="material-icons   unchecked">radio_button_unchecked</span>
+                        <span class="material-icons   checked">radio_button_checked</span>
+                    </label>
+                </div>
+
             </div>
         </div>
-
+  
     </div>
+</form>
 </body>
 </html>
