--- a/src/l.gutorova/homework_7/Task_2.html
+++ b/src/l.gutorova/homework_7/Task_2.html
@@ -242,7 +242,7 @@
             </div>
         </label>
         <label class="checkbox  green">
-            <div class="comteiner-2">
+            <div class="comteiner-2   margin">
                 <div class="line  green"></div>
     
                 <div class="content">
