--- a/src/a.darashevich/homework_7/task_2/task_2.html
+++ b/src/a.darashevich/homework_7/task_2/task_2.html
@@ -24,7 +24,7 @@
                 <div class="date"><span class="day">WED</span><span class="date_min">23</span> </div>
                 <div class="date"><span class="day">THU</span><span class="date_min">24</span><div class="circle"></div> </div>
                 <div class="date"><span class="day">FRI</span><span class="date_min">25</span> </div>
-                <div class="date active"><span class="day">THU</span><span class="date_min">26</span></div>
+                <div class="date"><span class="day">THU</span><span class="date_min">26</span></div>
                 <div class="date"><span class="day">FRI</span><span class="date_min">27</span> <div class="circle"></div></div>
                 <div class="date"><span class="day">THU</span><span class="date_min">28</span><div class="circle"></div> </div>
                 <div class="date"><span class="day">FRI</span><span class="date_min">29</span> </div>
