--- a/src/l.gutorova/homework_8/Homework_8.html
+++ b/src/l.gutorova/homework_8/Homework_8.html
@@ -11,8 +11,8 @@
     <div class="common-1">
 
         <div class="conteiner-1">
-            <a class="a_1" target="_blank" href="https://yandex.by/"></a>
-            <a class="a_2" target="_blank" href="./Homework_8.html"></a>
+            <a class="link_1" target="_blank" href="https://yandex.by/"></a>
+            <a class="link_2" target="_blank" href="./Homework_8.html"></a>
         </div>
 
         <div class="conteiner-2">
@@ -20,8 +20,8 @@
             <div class="text-2">Заказывайте машину, чтобы отправиться в путь,
                 <br>или доставку, чтобы отправить в путь небольшой
                 <br>груз</div>
-                <div class="a_3">
-                    <a href="#bottom">Скачать приложение</a>
+                <div class="link_3">
+                    <a class="link_bottom" href="#bottom">Скачать приложение</a>
                 </div>
         </div>
     </div>
