--- a/src/l.gutorova/homework_8/Homework_8.html
+++ b/src/l.gutorova/homework_8/Homework_8.html
@@ -21,14 +21,27 @@
                 <br>или доставку, чтобы отправить в путь небольшой
                 <br>груз</div>
                 <div class="link_3">
-                    <a class="link_bottom" href="#bottom">Скачать приложение</a>
+                    <a  href="#bottom">Скачать приложение</a>
                 </div>
         </div>
     </div>
  
     <div class="common-2">
         <div class="conteiner-3">
-
+            <div class="conteiner-4">
+                <div class="link_4">
+                    <a href="#bottom">поездки</a>
+                </div>
+                <div class="text-1">Быстрый заказ<br>машины</div>
+                <div class="text-2">Вы указываете, куда ехать, и сразу видите цену 
+                    <br>поездки и предполагаемое время в пути. Оплатить 
+                    <br>можно картой или наличными водителю.
+                </div>
+                <div class="animation">
+                    <div class="text-2">Заказать машину в Яндекс Go</div>
+                    <div></div>
+                </div>
+            </div>
         </div>
 
     </div>
