--- a/src/l.gutorova/homework_8/Homework_8.html
+++ b/src/l.gutorova/homework_8/Homework_8.html
@@ -38,8 +38,8 @@
                     <br>можно картой или наличными водителю.
                 </div>
                 <div class="animation">
-                    <div class="text-2">Заказать машину в Яндекс Go</div>
-                    <div></div>
+                    <a class="link_5" href="#bottom">Заказать машину в Яндекс Go</a>
+                    <div class="arrow">&#8594;</div>
                 </div>
             </div>
         </div>
