--- a/src/l.gutorova/homework_8/Homework_8.html
+++ b/src/l.gutorova/homework_8/Homework_8.html
@@ -6,6 +6,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Homework_8</title>
     <link rel="stylesheet" type="text/css" href="Homework_8.css">
+    <link href="https://fonts.googleapis.com/css2?family=Material+Icons"
+      rel="stylesheet">
+
 </head>
 <body>
     <div class="common-1">
@@ -44,8 +47,49 @@
             </div>
         </div>
         <div class="conteiner-5"></div>
-
     </div>
+
+    <div class="common-3">
+        <div class="conteiner-6">
+            <div class="conteiner-7"></div>
+            <div class="conteiner-8">
+                <div class="link_4">
+                    <a href="#bottom">доставка</a>
+                </div>
+                <div class="text-1">Перевозка ваших<br>вещей</div>
+                <div class="text-2">Водитель передаст документы, доставит
+                    <br>цветы или довезёт небольшой груз
+                </div>
+                <div class="animation">
+                    <a class="link_5" href="#bottom">Заказать машину в Яндекс Go</a>
+                    <div class="arrow">&#8594;</div>
+                </div>
+             </div>
+        </div>
+        <div class="conteiner-9"></div>
+    </div>
+    <div class="common-4">
+        <div class="conteiner-6">
+            <div class="conteiner-10">
+                <div class="text-1">Скачайте<br>приложение</div>
+                <div class="text-2">Введите номер, и мы пришлём вам смс 
+                    <br>со ссылкой на приложение.
+                </div>
+                <div class="animation  animation-border">
+                    <label class="phone">
+                        <input type="tel" placeholder="+375 ХХ ХХХ-ХХ-ХХ">
+                    </label>
+                    <div><span class="material-icons">chevron_right</span></div>
+                </div>
+             </div>
+            </div>
+            <div class="conteiner-11"></div>
+
+        </div>
+    </div>
+
+
+
 
     <a id="bottom"></a>
 </body>
