--- a/src/l.gutorova/homework_8/Homework_8.html
+++ b/src/l.gutorova/homework_8/Homework_8.html
@@ -20,7 +20,7 @@
 
         <div class="conteiner-2">
             <div class="text-1">Ехать,<br>отправлять,<br>встречат</div>
-            <div class="text-2">Заказывайте машину, чтобы отправиться в путь,
+            <div class="text-2  text-animation">Заказывайте машину, чтобы отправиться в путь,
                 <br>или доставку, чтобы отправить в путь небольшой
                 <br>груз</div>
                 <div class="link_3">
@@ -61,7 +61,7 @@
                     <br>цветы или довезёт небольшой груз
                 </div>
                 <div class="animation">
-                    <a class="link_5" href="#bottom">Заказать машину в Яндекс Go</a>
+                    <a class="link_5" href="#bottom">Заказать доставку через Яндекс Go</a>
                     <div class="arrow">&#8594;</div>
                 </div>
              </div>
@@ -83,9 +83,23 @@
                 </div>
              </div>
             </div>
-            <div class="conteiner-11"></div>
-
+            <div class="conteiner-11  media"></div>
+            <div class="conteiner-12"></div>
+            <div class="conteiner-13"></div>
         </div>
+    </div>
+    <div class="common-5">
+        <div class="common-5_top">
+            <div class="top-text">Беларусь (Русский)</div>
+            <div class="top-icon">
+                <div class="icon"><a target="_blank" href="https://vk.com/belarus.yandexgo"><img src="./picture/vk.svg" ></a></div>
+                <div class="icon"><a target="_blank" href="https://www.facebook.com/belarus.yandex.go/"><img src="./picture/fb.svg"></a></div>
+                <div class="icon"><a target="_blank" href="https://www.instagram.com/yandex.go.belarus/"><img src="./picture/inst.svg"></a></div>
+            </div>
+        </div>
+        <div class="common-5_middle"></div>
+        <div class="common-5_bottom"></div>
+
     </div>
 
 
