--- a/src/l.gutorova/homework_8/Homework_8.html
+++ b/src/l.gutorova/homework_8/Homework_8.html
@@ -97,7 +97,31 @@
                 <div class="icon"><a target="_blank" href="https://www.instagram.com/yandex.go.belarus/"><img src="./picture/inst.svg"></a></div>
             </div>
         </div>
-        <div class="common-5_middle"></div>
+        <div class="common-5_middle">
+            <div class="middle-trips">
+                <div class="middle-trips-text">Поездки</div>
+                <div class="variants">
+                    <a target="_blank" href="https://taxi.yandex.by/" >Заказать машину</a><br>
+                    <a target="_blank" href="https://delivery.yandex.com/by-ru/?from=gofooter" >Доставка</a><br>
+                    <a target="_blank" href="https://vk.com/belarus.yandexgo" >Новости сервиса</a><br>
+                    <a target="_blank" href="https://taxi.yandex.by/support/">Служба поддержки</a>
+                </div>
+            </div>
+            <div class="middle-food">
+                <div class="middle-trips-text">Еда</div>
+                <div class="variants">
+                    <a target="_blank" href="https://eda.yandex.by/?from=gofooter">Яндекс Еда</a>
+                </div>
+            </div>
+            <div class="middle-number">
+                <div class="middle-number-text">Введите номер, и мы пришлем вам смс со ссылкой<br> на приложение.</div>
+                <div  class="middle-number-phone">
+                    <input type="tel"  placeholder="+375 ХХ ХХХ-ХХ-ХХ">
+                    <div><span class="material-icons">chevron_right</span></div>
+                </div>
+            </div>
+        </div>
+        
         <div class="common-5_bottom"></div>
 
     </div>
